--- a/force-app/main/default/classes/BitlyIntegration.cls
+++ b/force-app/main/default/classes/BitlyIntegration.cls
@@ -1,20 +1,33 @@
 public class BitlyIntegration{
+
     
-    public static void generateBitly(List<Tipo_de_Tanque__c > lstT){
-    	
-        for (Tipo_de_Tanque__c i : lstT) { 
-            createBitly(lstT[i]);
-        }
+       
+    //Método que recibe como parámetro lista de Tipos de Tanques
+    public static void generateBitly(List<Tipo_de_Tanque__c > tiposDeTanques){
+         System.debug('entro a clase');
+        //Iterar sobre la lista recibida y por cada item llamar a la clase createBitly enviando sólo Id. 
+        for (Tipo_de_Tanque__c tanque : tiposDeTanques) { 
+            createBitly(tanque.Id);
+        }	
     }
     
+    
+    //Método asíncrono que recibe como parámetro el Id de cada tipo de tanque
     @future(callout=true)
-    public static void createBitly(List<Id> lstTId){
-
-        List<Tipo_de_Tanque__c> lstTT = [Select Id FROM Tipo_de_Tanque__c WHERE Id =: lstTId];
+    public static void createBitly(Id tipoDeTanqueId){
+        System.debug('entro a metodo');
+        
+        //Se recupera el registro en la base de datos con el Id recibido
+        
+        Tipo_de_Tanque__c tipoDeTanque = [SELECT Id, Name, Capacidad__c FROM Tipo_de_Tanque__c WHERE Id = :tipoDeTanqueId];
+        
+        //Se crea variable response de tipo map para almacenar respuesta que se recibirá 
         Map<String, Object> response = new Map<String,Object>();
-        List<Tipo_de_Tanque__c> tanquesToUpdate = new List<Tipo_de_Tanque__c>();
+      
+        //Variable para almacenar endpoint
         String endpoint = System.Label.Bitly_EndPoint + '/v4/shorten'; 
-
+          
+        
         try {                  
             HttpRequest req = new HttpRequest();
             HttpResponse res = new HttpResponse();
@@ -27,23 +40,21 @@ public class BitlyIntegration{
             req.setBody(JSON.serialize(new Map<String, Object>{               
                 'group_guid' => System.Label.Bitly_GroupId,  
                 'domain'=> 'bit.ly',
-                'long_url' => System.Label.Base_URL + lstTId.Id
+                'long_url' => System.Label.Base_URL + tipoDeTanque.Id
             })); 
-
-                // for eg. Base_URL = https://myorg-dev-ed.my.salesforce.com/
-
-	        res = http.send(req);            
-	        response = (Map<String, Object>) JSON.deserializeUntyped(res.getBody());
-	        System.debug('Str:' + res.getBody());
-	        lstT.URL_Corto__c  = (String) response.get('link');
-	        tanquesToUpdate.add(lstT);
+            
+            //Se envía petición y se almacena en variable res
+            
+            res = http.send(req);            
+            response = (Map<String, Object>) JSON.deserializeUntyped(res.getBody());
+            System.debug('RESPUESTA STRING:' + res.getBody());
+            tipoDeTanque.URL_Corto__c  = (String) response.get('link');
+            System.debug('RESULTADO : '+ tipoDeTanque);
+            
+            update tipoDeTanque;
    
-	}catch (Exception e) {         
-	    System.debug('Error:' + e.getMessage() + 'LN:' + e.getLineNumber() );           
-        }
-        if(tanquesToUpdate.size()>0){
-            update tanquesToUpdate;
+        }catch (Exception e) {         
+            System.debug('Error:' + e.getMessage() + 'Linea:' + e.getLineNumber() );           
         }
     }
-}
- 
+ }
