--- a/force-app/main/default/classes/BitlyIntegrationTest.cls
+++ b/force-app/main/default/classes/BitlyIntegrationTest.cls
@@ -4,44 +4,43 @@ public class BitlyIntegrationTest {
     @isTest
     static void testGenerateBitly() {
         
-        // Crear datos de prueba
+        //Preparación
         Tipo_de_Tanque__c tanque = new Tipo_de_Tanque__c(Name = 'Tanque de Prueba');
         insert tanque;
 
+        //Ejecución
         Test.startTest();
-        // Usar el mock HTTP en las pruebas
+       	// Configuración del mock HTTP que simula llamadas HTTP a Bitly
         Test.setMock(HttpCalloutMock.class, new BitlyIntegrationCalloutMock());
-
-        // Llamar al método de la clase BitlyIntegration para probar
+        
         List<Tipo_de_Tanque__c> tiposDeTanques = new List<Tipo_de_Tanque__c>{ tanque };
         BitlyIntegration.generateBitly(tiposDeTanques);
+		Test.stopTest();
 
-        Test.stopTest();
-
-        
-        // Realizar comparaciones para verificar que el comportamiento esperado ocurrió
+        //Verificación
         Tipo_de_Tanque__c updatedTanque = [SELECT Id, URL_Corto__c FROM Tipo_de_Tanque__c WHERE Id = :tanque.Id];
-        //System.assertEquals(200, response.getStatusCode());
         System.assertEquals('https://bit.ly/shortlink', updatedTanque.URL_Corto__c);
     }
     
     @isTest
     static void testGenerateBitlyWithException() {
-        // Crear datos de prueba
+        
+        //Preparación
         Tipo_de_Tanque__c tanque = new Tipo_de_Tanque__c(Name = 'Tanque de Prueba');
         insert tanque;
-
+        
+		//Ejecución
         Test.startTest();
-        // Usar el mock HTTP en las pruebas para forzar una excepción
+        
+        // Configuración del mock HTTP que simula llamadas HTTP a Bitly pero provoca excepciones controladas
         Test.setMock(HttpCalloutMock.class, new BitlyIntegrationCalloutExceptionMock());
 
-        // Llamar al método de la clase BitlyIntegration para probar
         List<Tipo_de_Tanque__c> tiposDeTanques = new List<Tipo_de_Tanque__c>{ tanque };
         BitlyIntegration.generateBitly(tiposDeTanques);
 
         Test.stopTest();
 
-        // Realizar comparaciones para verificar que el comportamiento esperado ocurrió
+        //Verificación
         Tipo_de_Tanque__c updatedTanque = [SELECT Id, URL_Corto__c FROM Tipo_de_Tanque__c WHERE Id = :tanque.Id];
         System.assert(updatedTanque.URL_Corto__c == null);
     }
