--- a/force-app/main/default/classes/BitlyIntegrationTriggerTest.cls
+++ b/force-app/main/default/classes/BitlyIntegrationTriggerTest.cls
@@ -1,42 +1,45 @@
 @isTest
 private class BitlyIntegrationTriggerTest {
 	@isTest
-    static void Insert_BitlyIntegrationTrigger(){
-        //Preparación
+    static void insert_BitlyIntegrationTrigger(){
+        // Test data setup
         Tipo_de_Tanque__c tanque = new Tipo_de_Tanque__c();
         tanque.Name = 'Almacenamiento medido';
         tanque.Capacidad__c = 12345;
         tanque.URL_Corto__c = 'https://sforce.co/3E71RfR';
         
-        //Ejecución
+        // Call the method to be tested
         Test.startTest();
-        insert tanque;
+        INSERT tanque;
         Test.stopTest();
         
-        //Verificación
-        Tipo_de_Tanque__c tanqueResponse = [SELECT Id, URL_Corto__c FROM Tipo_de_Tanque__c WHERE Id =:tanque.Id ];
+        // Verify the result using assertions
+        Tipo_de_Tanque__c tanqueResponse = [SELECT Id, URL_Corto__c 
+                                            FROM Tipo_de_Tanque__c 
+                                            WHERE Id =:tanque.Id ];
         
         System.assertNotEquals(null, tanqueResponse.URL_Corto__c, 'La URL corta no debe ser nula');
         System.assertNotEquals('', tanqueResponse.URL_Corto__c, 'La URL corta no debe estar vacía');
     }
     @isTest
-    static void Update_BitlyIntegrationTrigger(){
-        //Preparación
+    static void update_BitlyIntegrationTrigger(){
+        // Test data setup
         Tipo_de_Tanque__c tanque = new Tipo_de_Tanque__c();
         tanque.Name = 'Almacenamiento medido';
         tanque.Capacidad__c = 12345;
         tanque.URL_Corto__c = 'https://sforce.co/3E71RfR';
-        insert tanque;
+        INSERT tanque;
         tanque.Name = 'Almacenamiento desmedido' ;
         
-        //Ejecución
+        // Call the method to be tested
         Test.startTest();
-        update tanque;
+        UPDATE tanque;
         Test.stopTest();
         
-        //Verificación
-        Tipo_de_Tanque__c tanqueResponse = [SELECT Id, Name FROM Tipo_de_Tanque__c WHERE Id =:tanque.Id ];
-        
+        // Verify the result using assertions
+        Tipo_de_Tanque__c tanqueResponse = [SELECT Id, 
+                                            Name FROM Tipo_de_Tanque__c 
+                                            WHERE Id =:tanque.Id ];
         System.assertEquals('Almacenamiento desmedido', tanqueResponse.Name);
      
     }
