--- a/force-app/main/default/classes/TiposDeTanquesServiceTest.cls
+++ b/force-app/main/default/classes/TiposDeTanquesServiceTest.cls
@@ -2,16 +2,16 @@
 private class TiposDeTanquesServiceTest {
     @isTest
     static void GetFilteredTiposDeTanqueTest() {
-        // Preparación
+        // Test data setup
         Tipo_de_Tanque__c tipoDeTanque = new Tipo_de_Tanque__c(Name = 'Test Tanque', Capacidad__c = 100, Marca__c = 'ProLine Industrial Tanks');
-        insert tipoDeTanque;
+        INSERT tipoDeTanque;
 
-        // Ejecución
+        // Call the method to be tested
         Test.startTest();
         List<Tipo_de_Tanque__c> result = tiposDeTanquesService.getFilteredTiposDeTanque('Test');
         Test.stopTest();
 
-        // Verificación
+        // Verify the result using assertions
         System.assertEquals(1, result.size(), 'Debería haber un tipo de tanque en el resultado');
         Tipo_de_Tanque__c retrievedTipoDeTanque = result[0];
         System.assertEquals('Test Tanque', retrievedTipoDeTanque.Name, 'El nombre del tipo de tanque no coincide');
